src/test/deca/context/valid/created/decl_var/decl_int_eq_float.deca
// Description :
//    test affectation int = float
//
// Resultats :
//		Ok

{
int a = 0.5; 
}