src/test/deca/context/invalid/created/decl_var/decl_int_eq_bool.deca
// Description :
//    test affectation incorrect int = bool
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: Types incompatibles pour l’affectation

{
int a = true; //true n'est pas un int

}